--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "storybook": "start-storybook -s ./public -p 6006",
-        "build-storybook": "build-storybook",
-        "test": "jest",
         "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
     },
     "dependencies": {
@@ -19,21 +16,15 @@
         "cors": "^2.8.5",
         "cross-fetch": "^3.1.4",
         "lodash": "^4.17.21",
-        "next": "^10.2.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "next": "^14.2.23",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "react-fast-marquee": "^1.1.3",
         "react-intersection-observer": "^8.32.0",
         "react-player": "^2.9.0",
         "rss-parser": "^3.12.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.14.0",
-        "@storybook/addon-actions": "^6.2.9",
-        "@storybook/addon-essentials": "^6.2.9",
-        "@storybook/addon-links": "^6.2.9",
-        "@storybook/addon-storyshots": "^6.2.9",
-        "@storybook/react": "^6.2.9",
         "@testing-library/dom": "^7.30.4",
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.6",
@@ -41,13 +32,11 @@
         "@types/cors": "^2.8.10",
         "@types/jest": "^26.0.23",
         "@types/lodash": "^4.14.170",
-        "@types/react": "^17.0.4",
+        "@types/react": "^17.0.83",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
-        "babel-eslint": "^10.1.0",
-        "babel-jest": "^26.6.3",
-        "babel-loader": "^8.2.2",
         "eslint": "^7.25.0",
+        "eslint-config-next": "^14.2.23",
         "eslint-config-prettier": "^8.3.0",
         "eslint-config-react-app": "^6.0.0",
         "eslint-plugin-flowtype": "^5.7.2",
