--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-    "name": "odell-portfolio",
-    "version": "0.1.0",
+    "name": "client-sample-oharmon",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "next start",
-        "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
+        "start": "serve out"
     },
     "dependencies": {
         "@fontsource/lato": "^4.2.2",
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
         "clsx": "^1.1.1",
-        "cors": "^2.8.5",
-        "cross-fetch": "^3.1.4",
         "lodash": "^4.17.21",
         "next": "^14.2.23",
         "react": "^18.3.1",
@@ -25,33 +22,12 @@
         "rss-parser": "^3.12.0"
     },
     "devDependencies": {
-        "@testing-library/dom": "^7.30.4",
-        "@testing-library/jest-dom": "^5.12.0",
-        "@testing-library/react": "^11.2.6",
-        "@testing-library/user-event": "^13.1.8",
-        "@types/cors": "^2.8.10",
-        "@types/jest": "^26.0.23",
-        "@types/lodash": "^4.14.170",
-        "@types/react": "^17.0.83",
-        "@typescript-eslint/eslint-plugin": "^4.22.0",
-        "@typescript-eslint/parser": "^4.22.0",
-        "eslint": "^7.25.0",
+        "@types/lodash": "^4.17.14",
+        "@types/node": "22.10.10",
+        "@types/react": "18.3.18",
+        "@types/react-dom": "^18.3.5",
         "eslint-config-next": "^14.2.23",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-config-react-app": "^6.0.0",
-        "eslint-plugin-flowtype": "^5.7.2",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^24.3.6",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.23.2",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "eslint-plugin-testing-library": "^4.1.2",
-        "jest": "^26.6.3",
-        "jest-css-modules": "^2.1.0",
-        "jest-fetch-mock": "^3.0.3",
-        "prettier": "^2.2.1",
-        "react-test-renderer": "^17.0.2",
-        "typescript": "^4.2.4"
+        "serve": "^14.2.4",
+        "typescript": "5.7.3"
     }
 }
